testdata/source/org/intellij/plugins/ceylon/annotator/SyntaxError.ceylon

shared class Hello( {<EOLError descr="incorrect syntax: no viable alternative at token 'void'"></EOLError>
    void sayHello()<error descr="incorrect syntax: missing closing parenthesis ')' at '{'"> </error>{
    }
}<EOLError descr="incorrect syntax: mismatched token end of file expecting EOF"></EOLError>